--- a/index.html
+++ b/index.html
@@ -1,150 +1,181 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Thanu sri Deshamoni - Resume</title>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-	<style>
-		body {
-			font-family: 'Lato', sans-serif;
-			margin: 0;
-			padding: 0;
-			background-color: #f5f5f5;
-		}
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Thanu Sri Deshamoni - Resume</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Lato', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f5f5f5;
+            color: #333;
+        }
 
-		header {
-			background-color: #0a4275;
-			color: #fff;
-			padding: 20px;
-			text-align: right;
-		}
+        header {
+            background-color: #0a4275;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
 
-		.container {
-			max-width: 800px;
-			margin: 0 auto;
-			padding: 20px;
-			background-color: #fff;
-			box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
-		}
+        .container {
+            max-width: 900px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0px 0px 15px rgba(0,0,0,0.2);
+        }
 
-		h1 {
-			margin-top: 0;
-			font-weight: normal;
-			font-size: 24px; /* Adjust the font size as desired */
-	margin-right: 20px; /* Add some right margin for spacing */
-		}
+        h1, h2, h3 {
+            margin-top: 0;
+            font-weight: normal;
+        }
 
-		h2 {
-			font-size: 24px;
-			font-weight: normal;
-		}
+        h1 {
+            font-size: 28px;
+        }
 
-		p {
-			font-size: 18px;
-			line-height: 1.5;
-			margin: 0 0 20px;
-		}
-       .p1 {
-            font-size: 15px;
-            line-height: 0.6;
+        h2 {
+            font-size: 24px;
+            border-bottom: 2px solid #0a4275;
+            padding-bottom: 10px;
+            margin-bottom: 20px;
+        }
+
+        h3 {
+            font-size: 20px;
+            margin-top: 0;
+        }
+
+        p {
+            font-size: 16px;
+            line-height: 1.6;
             margin: 0 0 20px;
         }
-		a {
-			color: #0a4275;
-			text-decoration: none;
-		}
 
-		ul {
-			list-style-type: none;
-			margin: 0;
-			padding: 0;
-		}
+        a {
+            color: #0a4275;
+            text-decoration: none;
+            font-weight: bold;
+        }
 
-		ul li {
-			margin-bottom: 10px;
-		}
+        a:hover {
+            text-decoration: underline;
+        }
 
-		ul li span {
-			font-weight: bold;
-		}
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
 
-		.section {
-			margin-bottom: 40px;
-		}
+        ul li {
+            margin-bottom: 10px;
+        }
 
-		.section:last-child {
-			margin-bottom: 0;
-		}
-	</style>
+        .section {
+            margin-bottom: 40px;
+        }
+
+        .section:last-child {
+            margin-bottom: 0;
+        }
+
+        .contact-info {
+            font-size: 16px;
+            margin-bottom: 10px;
+        }
+
+        .skills, .certifications, .leadership {
+            margin: 0;
+            padding: 0;
+        }
+
+        .skills ul, .certifications ul, .leadership ul {
+            padding-left: 20px;
+        }
+    </style>
 </head>
 <body>
-	<header>
-		<h1 align:"right" >Thanusri Deshamoni</h1>
-		<h1 align:"right"> email:deshamonithanusri06@gmail.com</h1>
-		
-	</header>
+    <header>
+        <h1>Thanu Sri Deshamoni</h1>
+        <p class="contact-info">
+            <a href="tel:845-484-9756">845-484-9756</a> | 
+            <a href="mailto:deshamonithanusri06@gmail.com">deshamonithanusri06@gmail.com</a> | 
+            <a href="https://www.linkedin.com/in/thanusri-deshamoni" target="_blank">LinkedIn</a>
+        </p>
+    </header>
 
-	<div class="container">
-    <section class="section">
-        <h2>Profiles</h2>
-        <ul>
-            <li><a href="https://github.com/thanusri123">GitHub</a></li>
-            <li><a href="https://www.linkedin.com/in/thanusri-deshamoni">LinkedIn</a></li>
-        </ul>
-        <h2>Summary</h2>
-        <p>Results-driven IT Administrator, Quality Assurance Analyst, and Technical Support Consultant with a Master’s in Computer Science. Experienced in overseeing digital learning technologies, providing professional development, and supporting innovative pedagogy. Adept at solving technical problems and improving system functionalities within a motivated team.</p>
-    </section>
+    <div class="container">
+        <section class="section">
+            <h2>Education</h2>
+            <p><strong>Marist College</strong><br>
+               Master of Science in Computer Science | Specialization in Software Development<br>
+               May 2023<br>
+               GPA: 3.2
+            </p>
+            <p><strong>CVR College of Engineering</strong><br>
+               Bachelor of Technology | Specialization in Software Development<br>
+               May 2021<br>
+               GPA: 9.2
+            </p>
+        </section>
 
-    <section class="section">
-        <h2>Skills</h2>
-        <p>Java, Python, C, HTML, CSS, JavaScript, Django, React, Node.js, MySQL, MongoDB, Git, Jira, Eclipse, Android Studio, Regression Testing, Selenium, Power BI, Agile Software Development, Software Design Patterns, Learning Management Systems (LMS), Educational Technology, Technical Support</p>
-    </section>
+        <section class="section">
+            <h2>Professional Experience</h2>
 
-    <section class="section">
-        <h2>Experience</h2>
-
-        <h3>Technical Support Consultant, Quality Assurance Analyst, Marist College | Poughkeepsie, NY | 07/2022 - 05/2023</h3>
-        <ul>
-            <li>Conducted validation testing for Learning Management System (LMS) upgrades, enhancing system functionality and user experience.</li>
-            <li>Collaborated with the global technical community SAKAI to perform software risk assessments, ensuring optimal LMS performance and addressing potential issues.</li>
-            <li>Led the QA team, fostering collaboration and streamlining testing processes, contributing to improved project outcomes and faculty satisfaction.</li>
-        </ul>
-
-        <h3>Intern – Pre Education Program (PEP), EPAM Systems Ltd | Hyderabad, India | 01/2020 - 06/2020</h3>
-        <ul>
-            <li>Gained insights into Agile development methodologies and participated in team meetings, enhancing understanding of software engineering principles and quality assurance processes.</li>
-            <li>Engaged in learning opportunities, including attending webinars and workshops, which expanded technical skills and knowledge in software development.</li>
-            <li><strong>Project 1:</strong> User-Customizable Product Design Website and Application with Payment Integration</li>
+            <h3>Technical Support Consultant, Quality Assurance Analyst</h3>
+            <p>Marist College | Poughkeepsie, NY | July 2022 - May 2023</p>
             <ul>
-                <li>Developed a user-friendly website and application allowing customers to design personalized products, improving customer satisfaction by 20%.</li>
-                <li>Integrated Stripe for secure payment processing, contributing to a seamless checkout experience and a 15% reduction in payment-related issues.</li>
+                <li>Conducted validation testing for Learning Management System (LMS) upgrades, resulting in improved system functionality.</li>
+                <li>Collaborated with the global technical community SAKAI to perform software risk assessments, identifying potential issues and ensuring optimal LMS performance.</li>
+                <li>Led the QA team, fostering a collaborative environment with technical professionals and student colleagues, contributing to streamlined testing processes.</li>
             </ul>
-            <li><strong>Project 2:</strong> Integrated Automatic Flood Warning System using IoT</li>
-            <ul>
-                <li>Created an IoT-based flood warning system to detect water levels and rate of rise.</li>
-                <li>Collected sensor data, generated alerts, and sent notifications to smartphones.</li>
-                <li>Utilized Google Cloud Messaging (GCM) for efficient communication of flood warnings.</li>
-            </ul>
-            <li><strong>Project 3:</strong> Information Security with Image Steganography</li>
-            <ul>
-                <li>Developed a cross-platform application for enhanced data security.</li>
-                <li>Implemented encryption and steganography techniques to protect data.</li>
-                <li>Enabled users to enter textual data, encrypt it, and hide it within image files for secure communication.</li>
-            </ul>
-        </ul>
-    </section>
 
-    <section class="section">
-        <p class="p1">Thanu Sri Deshamoni</p>
-        <p class="p1">IT Administrator, Quality Assurance Analyst, and Technical Support Consultant</p>
-        <p class="p1">Poughkeepsie, NY</p>
-        <p class="p1">Mobile: 845-484-9756</p>
-        <p class="p1">Email: deshamonithanusri06@gmail.com</p>
-    </section>
-</div>
+            <h3>Intern – Pre Education Program (PEP)</h3>
+            <p>EPAM Systems Ltd | Hyderabad, India | Jan 2020 - Jun 2020</p>
+            <ul>
+                <li>Participated in team meetings and discussions, gaining insights into Agile development methodologies.</li>
+                <li>Acquired knowledge in software engineering principles, object-oriented design, and quality assurance processes.</li>
+                <li>Actively engaged in learning opportunities, attending webinars and workshops to expand technical skills.</li>
+                <li>Attended Pre Education Program (PEP) conducted by EPAM Systems India Pvt Ltd, participating in 13 online webinars covering beginner-level modules on various software engineering topics.</li>
+            </ul>
+        </section>
 
-            </section>
+        <section class="section">
+            <h2>Leadership Activities and Volunteer Experience</h2>
+            
+            <h3>Project: User-Customizable Product Design Website and Application with Payment Integration</h3>
+            <p>Capstone Project - Fellow</p>
+            <ul>
+                <li>Collaboratively engineered a user-friendly website and application enabling customers to create bespoke products, driving a notable 20% elevation in customer satisfaction.</li>
+                <li>Focused on studying and gathering requirements to ensure alignment with user needs.</li>
+            </ul>
+
+            <h3>Digital Education – Student Employee (Fellow)</h3>
+            <ul>
+                <li>Provided leadership as head of the QA team, fostering collaboration and streamlining testing processes.</li>
+                <li>Led scripting sessions and contributed in meetings for Sakai, ensuring project alignment and cohesion.</li>
+            </ul>
+        </section>
+
+        <section class="section">
+            <h2>Certifications</h2>
+            <ul>
+                <li>Pre-Education Program (PEP 2022) - EPAM Systems</li>
+                <li>IBM Enterprise Design Thinking Practitioner Certification</li>
+                <li>Data Processing Specialist, Software Development Trainee - Aspiring Minds</li>
+            </ul>
+        </section>
+
+        <section class="section">
+            <h2>Skills</h2>
+            <ul>
+                <li>Java, Python, C, HTML, CSS, JavaScript, Django, React, Node.js, MySQL, MongoDB, Git, Jira, Eclipse, Android Studio</li>
+                <li>Regression Testing, Selenium, Power BI, Agile Software Development, Software Design Patterns</li>
+            </ul>
         </section>
     </div>
 </body>
