--- a/index.html
+++ b/index.html
@@ -3,19 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thanu Sri Deshamoni - Resume</title>
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
+    <title>Tanu Sri Deshamoni - Resume</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Lato', sans-serif;
+            font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f5f5f5;
-            color: #333;
+            background-color: #f4f4f9;
         }
 
         header {
-            background-color: #0a4275;
+            background-color: #0033a0;
             color: #fff;
             padding: 20px;
             text-align: center;
@@ -23,47 +22,30 @@
 
         .container {
             max-width: 900px;
-            margin: 0 auto;
+            margin: 20px auto;
             padding: 20px;
             background-color: #fff;
-            box-shadow: 0px 0px 15px rgba(0,0,0,0.2);
-        }
-
-        h1, h2, h3 {
-            margin-top: 0;
-            font-weight: normal;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
         }
 
         h1 {
             font-size: 28px;
+            margin: 0;
         }
 
         h2 {
             font-size: 24px;
-            border-bottom: 2px solid #0a4275;
-            padding-bottom: 10px;
-            margin-bottom: 20px;
-        }
-
-        h3 {
-            font-size: 20px;
-            margin-top: 0;
+            color: #0033a0;
+            border-bottom: 2px solid #0033a0;
+            padding-bottom: 5px;
+            margin-bottom: 10px;
         }
 
         p {
             font-size: 16px;
             line-height: 1.6;
-            margin: 0 0 20px;
-        }
-
-        a {
-            color: #0a4275;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        a:hover {
-            text-decoration: underline;
+            margin: 10px 0;
         }
 
         ul {
@@ -75,93 +57,123 @@
             margin-bottom: 10px;
         }
 
-        .section {
-            margin-bottom: 40px;
+        .skills-list {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
         }
 
-        .section:last-child {
-            margin-bottom: 0;
+        .skills-list span {
+            background-color: #e1e5ec;
+            border-radius: 5px;
+            padding: 5px 10px;
+            font-size: 14px;
+            color: #0033a0;
+            display: inline-block;
         }
 
-        .contact-info {
-            font-size: 16px;
-            margin-bottom: 10px;
+        .experience-item, .education-item {
+            margin-bottom: 20px;
         }
 
-        .skills, .certifications, .leadership {
+        .experience-item h3, .education-item h3 {
+            font-size: 20px;
+            color: #0033a0;
             margin: 0;
-            padding: 0;
         }
 
-        .skills ul, .certifications ul, .leadership ul {
-            padding-left: 20px;
+        .experience-item p, .education-item p {
+            font-size: 16px;
+            margin: 5px 0;
+        }
+
+        footer {
+            text-align: center;
+            padding: 10px;
+            background-color: #0033a0;
+            color: #fff;
+        }
+
+        .button {
+            display: inline-block;
+            background-color: #0033a0;
+            color: #fff;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+            transition: background-color 0.3s;
+        }
+
+        .button:hover {
+            background-color: #002680;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Thanu Sri Deshamoni</h1>
-        <p class="contact-info">
-            <a href="tel:845-484-9756">845-484-9756</a> | 
-            <a href="mailto:deshamonithanusri06@gmail.com">deshamonithanusri06@gmail.com</a> | 
-            <a href="https://www.linkedin.com/in/thanusri-deshamoni" target="_blank">LinkedIn</a>
-        </p>
+        <h1>Tanu Sri Deshamoni</h1>
+        <p>845-484-9756 | <a href="mailto:deshamonithanusri06@gmail.com" style="color: #fff;">deshamonithanusri06@gmail.com</a> | <a href="https://www.linkedin.com/in/thanusri-deshamoni" class="button" target="_blank">LinkedIn Profile</a></p>
     </header>
 
     <div class="container">
-        <section class="section">
+        <section>
             <h2>Education</h2>
-            <p><strong>Marist College</strong><br>
-               Master of Science in Computer Science | Specialization in Software Development<br>
-               May 2023<br>
-               GPA: 3.2
-            </p>
-            <p><strong>CVR College of Engineering</strong><br>
-               Bachelor of Technology | Specialization in Software Development<br>
-               May 2021<br>
-               GPA: 9.2
-            </p>
+            <div class="education-item">
+                <h3>Marist College</h3>
+                <p>Master of Science in Computer Science | Specialization in Software Development</p>
+                <p>May 2023 | GPA: 3.2</p>
+            </div>
+            <div class="education-item">
+                <h3>CVR College of Engineering</h3>
+                <p>Bachelor of Technology | Specialization in Software Development</p>
+                <p>May 2021 | GPA: 9.2</p>
+            </div>
         </section>
 
-        <section class="section">
+        <section>
             <h2>Professional Experience</h2>
-
-            <h3>Technical Support Consultant, Quality Assurance Analyst</h3>
-            <p>Marist College | Poughkeepsie, NY | July 2022 - May 2023</p>
-            <ul>
-                <li>Conducted validation testing for Learning Management System (LMS) upgrades, resulting in improved system functionality.</li>
-                <li>Collaborated with the global technical community SAKAI to perform software risk assessments, identifying potential issues and ensuring optimal LMS performance.</li>
-                <li>Led the QA team, fostering a collaborative environment with technical professionals and student colleagues, contributing to streamlined testing processes.</li>
-            </ul>
-
-            <h3>Intern – Pre Education Program (PEP)</h3>
-            <p>EPAM Systems Ltd | Hyderabad, India | Jan 2020 - Jun 2020</p>
-            <ul>
-                <li>Participated in team meetings and discussions, gaining insights into Agile development methodologies.</li>
-                <li>Acquired knowledge in software engineering principles, object-oriented design, and quality assurance processes.</li>
-                <li>Actively engaged in learning opportunities, attending webinars and workshops to expand technical skills.</li>
-                <li>Attended Pre Education Program (PEP) conducted by EPAM Systems India Pvt Ltd, participating in 13 online webinars covering beginner-level modules on various software engineering topics.</li>
-            </ul>
+            <div class="experience-item">
+                <h3>Technical Support Consultant, Quality Assurance Analyst - Marist College</h3>
+                <p>July 2022 - May 2023</p>
+                <ul>
+                    <li>Conducted validation testing for Learning Management System upgrades, resulting in improved system functionality.</li>
+                    <li>Collaborated with the global technical community SAKAI to perform software risk assessments, identifying potential issues and ensuring optimal LMS performance.</li>
+                    <li>Led the QA team, fostering a collaborative environment with technical professionals and student colleagues, contributing to streamlined testing processes.</li>
+                </ul>
+            </div>
+            <div class="experience-item">
+                <h3>Intern – Pre Education Program (PEP) - EPAM Systems</h3>
+                <p>January 2020 - June 2020</p>
+                <ul>
+                    <li>Participated in team meetings and discussions, gaining insights into Agile development methodologies.</li>
+                    <li>Acquired knowledge in software engineering principles, object-oriented design, and quality assurance processes.</li>
+                    <li>Actively engaged in learning opportunities, attending webinars and workshops to expand technical skills.</li>
+                    <li>Attended 13 online webinars covering beginner-level modules on various software engineering topics.</li>
+                </ul>
+            </div>
         </section>
 
-        <section class="section">
+        <section>
             <h2>Leadership Activities and Volunteer Experience</h2>
-            
-            <h3>Project: User-Customizable Product Design Website and Application with Payment Integration</h3>
-            <p>Capstone Project - Fellow</p>
-            <ul>
-                <li>Collaboratively engineered a user-friendly website and application enabling customers to create bespoke products, driving a notable 20% elevation in customer satisfaction.</li>
-                <li>Focused on studying and gathering requirements to ensure alignment with user needs.</li>
-            </ul>
-
-            <h3>Digital Education – Student Employee (Fellow)</h3>
-            <ul>
-                <li>Provided leadership as head of the QA team, fostering collaboration and streamlining testing processes.</li>
-                <li>Led scripting sessions and contributed in meetings for Sakai, ensuring project alignment and cohesion.</li>
-            </ul>
+            <div class="experience-item">
+                <h3>Capstone Project - User-Customizable Product Design Website and Application</h3>
+                <p>Fellow</p>
+                <ul>
+                    <li>Engineered a user-friendly website and application allowing customers to create bespoke products, increasing customer satisfaction by 20%.</li>
+                    <li>Studied and gathered requirements to ensure alignment with user needs.</li>
+                </ul>
+            </div>
+            <div class="experience-item">
+                <h3>Digital Education - Student Employee (Fellow)</h3>
+                <ul>
+                    <li>Led the QA team, fostering collaboration and streamlining testing processes.</li>
+                    <li>Led scripting sessions and contributed to meetings for Sakai, ensuring project alignment and cohesion.</li>
+                </ul>
+            </div>
         </section>
 
-        <section class="section">
+        <section>
             <h2>Certifications</h2>
             <ul>
                 <li>Pre-Education Program (PEP 2022) - EPAM Systems</li>
@@ -170,13 +182,35 @@
             </ul>
         </section>
 
-        <section class="section">
+        <section>
             <h2>Skills</h2>
-            <ul>
-                <li>Java, Python, C, HTML, CSS, JavaScript, Django, React, Node.js, MySQL, MongoDB, Git, Jira, Eclipse, Android Studio</li>
-                <li>Regression Testing, Selenium, Power BI, Agile Software Development, Software Design Patterns</li>
-            </ul>
+            <div class="skills-list">
+                <span>Java</span>
+                <span>Python</span>
+                <span>C</span>
+                <span>HTML</span>
+                <span>CSS</span>
+                <span>JavaScript</span>
+                <span>Django</span>
+                <span>React</span>
+                <span>Node.js</span>
+                <span>MySQL</span>
+                <span>MongoDB</span>
+                <span>Git</span>
+                <span>Jira</span>
+                <span>Eclipse</span>
+                <span>Android Studio</span>
+                <span>Regression Testing</span>
+                <span>Selenium</span>
+                <span>Power BI</span>
+                <span>Agile Software Development</span>
+                <span>Software Design Patterns</span>
+            </div>
         </section>
     </div>
+
+    <footer>
+        <p>Tanu Sri Deshamoni | IT Administrator, Quality Assurance Analyst, and Technical Support Consultant</p>
+    </footer>
 </body>
 </html>
