--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tanu Sri Deshamoni - Resume</title>
+    <title>Thanu Sri Deshamoni - Resume</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -112,7 +112,7 @@
 </head>
 <body>
     <header>
-        <h1>Tanu Sri Deshamoni</h1>
+        <h1>Thanu Sri Deshamoni</h1>
         <p>845-484-9756 | <a href="mailto:deshamonithanusri06@gmail.com" style="color: #fff;">deshamonithanusri06@gmail.com</a> | <a href="https://www.linkedin.com/in/thanusri-deshamoni" class="button" target="_blank">LinkedIn Profile</a></p>
     </header>
 
@@ -210,7 +210,7 @@
     </div>
 
     <footer>
-        <p>Tanu Sri Deshamoni | IT Administrator, Quality Assurance Analyst, and Technical Support Consultant</p>
+        <p>Thanu Sri Deshamoni | IT Administrator, Quality Assurance Analyst, and Technical Support Consultant</p>
     </footer>
 </body>
 </html>
